--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="app-header-mobile">
-          <button class="icon-button large">
+          <button id=""class="icon-button large">
             <i class="ph-list"></i>
           </button>
         </div>
@@ -82,7 +82,7 @@
             <h1>Bangor Saving Bank<small>©</small></h1>
             <div>
               Bangor Savings Bank ©<br />
-              All Rights Reserved 2021
+              All Rights Reserved 2024
             </div>
           </footer>
         </div>
